nav bar overflow fix

--- a/cordova/www/styles/main.styl
+++ b/cordova/www/styles/main.styl
@@ -60,9 +60,6 @@ button
 button:focus
   outline:none
 
-button:active
-  background:colorLGrey
-
 .view
   padding: 0px
   overflow:hidden
